<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">JPT Sportdag</string>
    <string name="begeleidingbutton">Begeleider</string>
    <string name="bottomDesc">Bottom layout bar</string>
    <string name="hardlopen">400m Hardlopen</string>
    <string name="hindernisbaan">Hindernisbaan</string>
    <string name="kieslln">Kies klas en leerling</string>
    <string name="kogel">Kogelstoten</string>
    <string name="leerlingbutton">Leerling</string>
    <string name="recordbutton">Record Houders</string>
    <string name="sport_image_string">Sport Image</string>
    <string name="sprint">80m Sprint</string>
    <string name="title_activity_kies_sport">KiesSportActivity</string>
    <string name="title_activity_sport">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="topbarDesc">Top layout bar</string>
    <string name="verspringen">Verspringen</string>
    <string name="vortex">Vortex werpen</string>
</resources>
