<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:background="@drawable/layout_achtergrond"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/top_id"
        android:longClickable="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/layout_bovenkant"
        android:scaleType="centerCrop"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/topbarDesc"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:id="@+id/bottom_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/layout_onderkant"
        android:scaleType="centerCrop"
        android:adjustViewBounds="false"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/bottomDesc"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <ScrollView
        android:layout_gravity="center"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_id"
        android:layout_below="@+id/top_id">

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="#fff"
                android:id="@+id/Leerlingbutton_id"
                android:background="@drawable/button"
                android:clickable="true"
                android:layout_width="240sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/leerlingbutton" />

            <Button
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="#fff"
                android:layout_gravity="center"
                android:id="@+id/Begeleidingbutton_id"
                android:background="@drawable/button"
                android:clickable="true"
                android:layout_width="240sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/begeleidingbutton" />

            <Button
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="#fff"
                android:id="@+id/Recordsbutton_id"
                android:background="@drawable/button"
                android:focusable="false"
                android:clickable="true"
                android:layout_width="240sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/recordbutton" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
